updated layout to fix icons not center aligning & extra right margin

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,8 +13,9 @@ h2{
     position: absolute;
     bottom: 10%;
     left:25%;
-    width: 100%;
+    width: 75%;
     background-color: white;
+
 }
 
 h3 {
@@ -38,25 +39,29 @@ h3 {
 
 #git {
     height: 50px;
-    margin-left: 50%;
+    margin-left: 45%;
+    margin-right: 55%;
     margin-bottom: 3%;
 }
 
 #linked {
     height: 55px;
-    margin-left: 50%;
+    margin-left: 45%;
+    margin-right: 55%;
     margin-bottom: 3%;
 }
 
 #resume {
     height: 52px;
-    margin-left: 51%;
+    margin-left: 46%;
+    margin-right: 54%;
     margin-bottom: 3%;
 }
 
 #email {
     height: 55px;
-    margin-left: 50%;
+    margin-left: 45%;
+    margin-right: 55%;
     margin-bottom: 3%;
 }
 
